--- a/loxone/loxone.html
+++ b/loxone/loxone.html
@@ -205,6 +205,7 @@
 
 
 
+
 </script>
 
 <script type="text/x-red" data-template-name="loxone-control-in">
@@ -261,6 +262,7 @@
     <div class="form-row">
         <span id="return-msg"></span>
     </div>
+
 
 
 
@@ -344,6 +346,7 @@
 
 
 
+
 </script>
 
 
@@ -392,6 +395,7 @@
     <div class="form-row">
         <span id="return-msg"></span>
     </div>
+
 
 
 
@@ -479,6 +483,7 @@
 
 
 
+
 </script>
 
 
@@ -506,11 +511,19 @@
     </div>
     <div class="form-row">
         <label></label>
+        <input type="checkbox" id="node-config-input-active" style="display:inline-block; width:auto; vertical-align:top;">
+        <label style="width: 70%;" for="node-config-input-active">
+            Activate connection?
+        </label>
+    </div>
+    <div class="form-row">
+        <label></label>
         <input type="checkbox" id="node-config-input-encrypted" style="display:inline-block; width:auto; vertical-align:top;">
         <label style="width: 70%;" for="node-config-input-encrypted">
             Use AES command encryption?
         </label>
     </div>
+
 
 
 
@@ -522,7 +535,8 @@
         defaults: {
             host: {value: "", required: true},
             port: {value: 80, required: true, validate: RED.validators.number()},
-            encrypted: {value: false}
+            encrypted: {value: false},
+            active: {value: true}
         },
         credentials: {
             username: {type: "text", required: true},
@@ -559,6 +573,7 @@
     code: 200
 }</pre>
     </p>
+
 
 </script>
 
@@ -608,6 +623,7 @@
 
 
 
+
 </script>
 
 <script type="text/javascript">
@@ -640,6 +656,7 @@
 
 
 
+
 </script>
 
 
@@ -661,6 +678,7 @@
     <div class="form-row">
         <span id="return-msg"></span>
     </div>
+
 
 
 
@@ -698,6 +716,7 @@
 
 
 
+
 </script>
 
 <script type="text/x-red" data-template-name="loxone-keepalive">
@@ -718,6 +737,7 @@
     <div class="form-row">
         <span id="return-msg"></span>
     </div>
+
 
 
 
