changed logo and color to match new loxone style

--- a/loxone/loxone.html
+++ b/loxone/loxone.html
@@ -298,7 +298,7 @@
     RED.nodes.registerType('loxone-control-in', {
         category: 'loxone',
         paletteLabel: 'control in',
-        color: '#83B817',
+        color: '#6AC550',
         defaults: {
             name: {value: ''},
             miniserver: {type: 'loxone-miniserver', required: true},
@@ -442,7 +442,7 @@
     RED.nodes.registerType('loxone-control-out', {
         category: 'loxone',
         paletteLabel: 'control out',
-        color: '#83B817',
+        color: '#6AC550',
         defaults: {
             name: {value: ''},
             miniserver: {type: 'loxone-miniserver', required: true},
@@ -705,7 +705,7 @@
     RED.nodes.registerType('loxone-webservice', {
         category: 'loxone',
         paletteLabel: 'webservice',
-        color: '#83B817',
+        color: '#6AC550',
         defaults: {
             name: {value: ''},
             miniserver: {type: 'loxone-miniserver', required: true},
@@ -775,7 +775,7 @@
     RED.nodes.registerType('loxone-online', {
         category: 'loxone',
         paletteLabel: 'online',
-        color: '#83B817',
+        color: '#6AC550',
         defaults: {
             name: {value: ''},
             miniserver: {type: 'loxone-miniserver', required: true},
@@ -827,7 +827,7 @@
     RED.nodes.registerType('loxone-keepalive', {
         category: 'loxone',
         paletteLabel: 'keepalive',
-        color: '#83B817',
+        color: '#6AC550',
         defaults: {
             name: {value: ''},
             miniserver: {type: 'loxone-miniserver', required: true},
@@ -917,7 +917,7 @@
     RED.nodes.registerType('loxone-stream-in', {
         category: 'loxone',
         paletteLabel: 'stream in',
-        color: '#83B817',
+        color: '#6AC550',
         defaults: {
             name: {value: ''},
             miniserver: {type: 'loxone-miniserver', required: true},
@@ -996,7 +996,7 @@
     RED.nodes.registerType('loxone-stream-all', {
         category: 'loxone',
         paletteLabel: 'stream all',
-        color: '#83B817',
+        color: '#6AC550',
         defaults: {
             name: {value: ''},
             miniserver: {type: 'loxone-miniserver', required: true},
