Show a error message on the frontend if the config node could not be fetched by node id

--- a/loxone/loxone.html
+++ b/loxone/loxone.html
@@ -34,10 +34,14 @@
 
             $.getJSON(url)
                 .done(function (data) {
+                    let userMsgCss = {
+                        'color': '#ad1625',
+                        'font-weight': 'bold'
+                    };
 
                     if (data.state == 'ok') {
 
-                        var userMsgCss = {
+                        userMsgCss = {
                             'color': '#49db3c'
                         };
 
