--- a/loxone/loxone.html
+++ b/loxone/loxone.html
@@ -633,7 +633,7 @@
         The return will hold the answer from the requested datapoint (URI):<br>
         <pre>{
     payload: "8.3.3.21",
-    topic: "dev/cfg/version",
+    topic: "jdev/cfg/version",
     code: 200
 }</pre><br>
         If the answer for the webservice call has more than one value, all these values will be returned as an object
