Fetch node id from event (#50)
* Fetch the current node id from the change event

* Show a error message on the frontend if the config node could not be fetched by node id

* updated documentation

--- a/loxone/loxone.html
+++ b/loxone/loxone.html
@@ -2,9 +2,7 @@
 
     var msStructure = null;
 
-    function getStructureFile(callback) {
-
-        var configNodeId = $('#node-input-miniserver').val();
+    function getStructureFile(configNodeId, callback) {
         var node = RED.nodes.node(configNodeId);
 
         $('#return-msg').html('').css({});
@@ -36,10 +34,14 @@
 
             $.getJSON(url)
                 .done(function (data) {
+                    let userMsgCss = {
+                        'color': '#ad1625',
+                        'font-weight': 'bold'
+                    };
 
                     if (data.state == 'ok') {
 
-                        var userMsgCss = {
+                        userMsgCss = {
                             'color': '#49db3c'
                         };
 
@@ -314,11 +316,12 @@
         oneditprepare: function () {
             var node = this;
 
-            function prepareInput() {
+            function prepareInput(e) {
                 disableChangeEvents();
                 $('#node-input-miniserver').on('change', prepareInput);
 
-                getStructureFile(function (data) {
+                const $miniServerSelect = $(e.currentTarget);
+                getStructureFile($miniServerSelect.val(), function (data) {
 
                     msStructure = data.structure;
 
@@ -344,7 +347,7 @@
                     }
 
                 });
-            };
+            }
 
             prepareInput();
         },
@@ -458,11 +461,12 @@
         oneditprepare: function () {
             var node = this;
 
-            function prepareInput() {
+            function prepareInput(e) {
                 disableChangeEvents();
                 $('#node-input-miniserver').on('change', prepareInput);
 
-                getStructureFile(function (data) {
+                const $miniServerSelect = $(e.currentTarget);
+                getStructureFile($miniServerSelect.val(), function (data) {
                     msStructure = data.structure;
 
                     $('#node-input-room, #node-input-category').on('change', fillControl);
@@ -629,7 +633,7 @@
         The return will hold the answer from the requested datapoint (URI):<br>
         <pre>{
     payload: "8.3.3.21",
-    topic: "dev/cfg/version",
+    topic: "jdev/cfg/version",
     code: 200
 }</pre><br>
         If the answer for the webservice call has more than one value, all these values will be returned as an object
@@ -939,7 +943,8 @@
                 $('#node-input-miniserver').on('change', prepareInput);
                 $('#node-input-category, #node-input-room').removeClass('input-error');
 
-                getStructureFile(function (data) {
+                const $miniServerSelect = $(e.currentTarget);
+                getStructureFile($miniServerSelect.val(), function (data) {
                     $('#node-input-category').val(node.category);
                     $('#node-input-room').val(node.room);
 
